--- a/checker/templates/upload.html
+++ b/checker/templates/upload.html
@@ -18,7 +18,7 @@
 
 		{% if filename %}
 			<div>
-				<img src="{{ url_for('display_image', filename=filename) }}">
+				<img src="{{ url_for('display_image', filename=filename) }}" name='picture'>
 			</div>
 			<div>
 				<a href="{{ url_for('predict', filename=filename)}}">
